<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_ai"
            android:icon="@drawable/ic_ai"
            android:title="@string/nav_ai" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_docs"
            android:icon="@drawable/ic_docs"
            android:title="@string/nav_docs" />

        <item
            android:id="@+id/nav_sheets"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_sheets" />

        <item
            android:id="@+id/nav_slides"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_slides" />

        <item
            android:id="@+id/nav_drive"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_drive" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_tasks" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_notes" />

        <item
            android:id="@+id/nav_forms"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_forms" />

        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_projects" />

        <item
            android:id="@+id/nav_wiki"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_wiki" />

        <item
            android:id="@+id/nav_whiteboard"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_whiteboard" />

        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_analytics" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_profile" />

    </group>

</menu>